--- a/rerun/app/src/main/res/layout/activity_main.xml
+++ b/rerun/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,12 @@
                 android:layout_height="match_parent"
                 tools:context="com.example.rerun.app.MainActivity">
 
-    <TextView
-            android:text="@string/hello_world"
+    <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="wrap_content"
+            android:text="Run"
+            android:id="@+id/run"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            style="@style/Base.TextAppearance.AppCompat.Large"/>
 </RelativeLayout>
